Update jdk-javac-plugin to contain nested annotations (#1432)
This pull requests updates the jdk-javac-plugin to parse the nested
annotations in external libraries and creates JSON files according to
it. For the nested annotation information, it uses
[`NestedAnnotationInfo`](https://github.com/uber/NullAway/blob/50ff5820bf6a645db68c4cdff5a00f647e27b5d1/nullaway/src/main/java/com/uber/nullaway/librarymodel/NestedAnnotationInfo.java#L14-L14)
class. It is the first step from
[#1410](https://github.com/uber/NullAway/issues/1410).

The added unit test for this is `nestedAnnotationsForMethods()`.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Detects and records nested JSpecify nullability annotations inside
generics, arrays, and wildcard bounds for method return types and
parameters.

* **Serialization / Compatibility**
* JSON output now includes nested annotation data; JSON parsing updated
to correctly reconstruct Guava ImmutableList contents.

* **Tests**
* Added unit tests validating nested-annotation capture and end-to-end
serialization for methods.

* **Chores**
  * Build configuration updated to include required library dependency.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: Manu Sridharan <msridhar@gmail.com>