@@ -3,15 +3,23 @@ package com.uber.nullaway.javacplugin;
 import static com.google.errorprone.BugPattern.SeverityLevel.WARNING;
 import static org.assertj.core.api.Assertions.assertThat;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.reflect.TypeToken;
 import com.google.errorprone.BugPattern;
 import com.google.errorprone.CompilationTestHelper;
 import com.google.errorprone.bugpatterns.BugChecker;
 import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.uber.nullaway.javacplugin.NestedAnnotationInfo.Annotation;
+import com.uber.nullaway.javacplugin.NestedAnnotationInfo.TypePathEntry;
 import com.uber.nullaway.javacplugin.NullnessAnnotationSerializer.ClassInfo;
 import com.uber.nullaway.javacplugin.NullnessAnnotationSerializer.MethodInfo;
 import com.uber.nullaway.javacplugin.NullnessAnnotationSerializer.TypeParamInfo;
 import java.io.IOException;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -19,6 +27,7 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Stream;
 import org.junit.Before;
 import org.junit.Rule;
@@ -107,7 +116,8 @@ public class NullnessAnnotationSerializerTest {
                                 "NullableReturn(java.lang.@org.jspecify.annotations.Nullable Integer)",
                                 false,
                                 false,
-                                List.of()))))));
+                                List.of(),
+                                Map.of()))))));
   }
 
   @Test
@@ -141,7 +151,8 @@ public class NullnessAnnotationSerializerTest {
                                 "publicMethod(java.lang.@org.jspecify.annotations.Nullable String)",
                                 false,
                                 false,
-                                List.of()))))));
+                                List.of(),
+                                Map.of()))))));
   }
 
   @Test
@@ -199,7 +210,8 @@ public class NullnessAnnotationSerializerTest {
                                 "<U>make(U)",
                                 false,
                                 false,
-                                List.of(new TypeParamInfo("U", List.of("@Nullable Object")))))))));
+                                List.of(new TypeParamInfo("U", List.of("@Nullable Object"))),
+                                Map.of()))))));
   }
 
   @Test
@@ -235,7 +247,8 @@ public class NullnessAnnotationSerializerTest {
                                 "annotatedMethod(java.lang.@org.jspecify.annotations.Nullable String)",
                                 false,
                                 false,
-                                List.of()))),
+                                List.of(),
+                                Map.of()))),
                     new ClassInfo(
                         "AnnotatedGeneric",
                         "Foo.AnnotatedGeneric<T>",
@@ -278,19 +291,22 @@ public class NullnessAnnotationSerializerTest {
                                 "<T>annotatedTypeArgument()",
                                 false,
                                 false,
-                                List.of(new TypeParamInfo("T", List.of("@Nullable Object")))),
+                                List.of(new TypeParamInfo("T", List.of("@Nullable Object"))),
+                                Map.of()),
                             new MethodInfo(
                                 "java.lang.@org.jspecify.annotations.Nullable String",
                                 "annotatedReturnType()",
                                 false,
                                 false,
-                                List.of()),
+                                List.of(),
+                                Map.of()),
                             new MethodInfo(
                                 "void",
                                 "annotatedParameter(java.lang.@org.jspecify.annotations.Nullable String)",
                                 false,
                                 false,
-                                List.of()))))));
+                                List.of(),
+                                Map.of()))))));
   }
 
   @Test
@@ -303,8 +319,8 @@ public class NullnessAnnotationSerializerTest {
             "@NullMarked",
             "public class Foo {",
             "  interface Bar {}",
-            "  public void arrayType(@Nullable String[] arr) {}",
-            "  public void wildCard(List<? super @Nullable Integer> list) {}",
+            "  public void arrayType(String @Nullable [] arr) {}",
+            "  public void wildcard(List<? super @Nullable Integer> list) {}",
             "  public <U extends @Nullable Object> void typeVariable(U u) {}",
             "  public <T extends @Nullable String & Bar> void intersection(T t) {}",
             "  public <T> void nullableOnTypeVar(List<@Nullable T> list) {}",
@@ -325,39 +341,196 @@ public class NullnessAnnotationSerializerTest {
                         List.of(
                             new MethodInfo(
                                 "void",
-                                "arrayType(java.lang.@org.jspecify.annotations.Nullable String[])",
+                                "arrayType(java.lang.String @org.jspecify.annotations.Nullable [])",
                                 false,
                                 false,
-                                List.of()),
+                                List.of(),
+                                Map.of()),
                             new MethodInfo(
                                 "void",
-                                "wildCard(java.util.List<? super java.lang.@org.jspecify.annotations.Nullable Integer>)",
+                                "wildcard(java.util.List<? super java.lang.@org.jspecify.annotations.Nullable Integer>)",
                                 false,
                                 false,
-                                List.of()),
+                                List.of(),
+                                Map.of(
+                                    0,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NULLABLE,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0),
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.WILDCARD_BOUND, 1)))))),
                             new MethodInfo(
                                 "void",
                                 "<U>typeVariable(U)",
                                 false,
                                 false,
-                                List.of(new TypeParamInfo("U", List.of("@Nullable Object")))),
+                                List.of(new TypeParamInfo("U", List.of("@Nullable Object"))),
+                                Map.of()),
                             new MethodInfo(
                                 "void",
                                 "<T>intersection(T)",
                                 false,
                                 false,
-                                List.of(
-                                    new TypeParamInfo("T", List.of("@Nullable String", "Bar")))),
+                                List.of(new TypeParamInfo("T", List.of("@Nullable String", "Bar"))),
+                                Map.of()),
                             new MethodInfo(
                                 "void",
                                 "<T>nullableOnTypeVar(java.util.List<@org.jspecify.annotations.Nullable T>)",
                                 false,
                                 false,
-                                List.of(new TypeParamInfo("T", List.of()))))))));
+                                List.of(new TypeParamInfo("T", List.of())),
+                                Map.of(
+                                    0,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NULLABLE,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0)))))))))));
+  }
+
+  @Test
+  public void nestedAnnotationsForMethods() {
+    compilationTestHelper
+        .addSourceLines(
+            "Foo.java",
+            "import org.jspecify.annotations.*;",
+            "import java.util.*;",
+            "@NullMarked",
+            "public abstract class Foo {",
+            "  public abstract <E extends @Nullable Object> Collection<E> checkedCollection(Collection<E> c, Class<@NonNull E> type);",
+            "  public abstract List<@Nullable String> nestedReturnType();",
+            "  public abstract void nestedParameterType(@Nullable String [] arr, List<@NonNull String>[] s);",
+            "  public abstract List<? extends @Nullable String> wildcardUpperBound();",
+            "  public abstract List<List<String @Nullable []>> nestedArrayType();",
+            "}")
+        .doTest();
+    Map<String, List<ClassInfo>> moduleClasses = getParsedJSON();
+    assertThat(moduleClasses)
+        .containsExactlyEntriesOf(
+            Map.of(
+                "unnamed",
+                List.of(
+                    new ClassInfo(
+                        "Foo",
+                        "Foo",
+                        true,
+                        false,
+                        List.of(),
+                        List.of(
+                            new MethodInfo(
+                                "java.util.Collection<E>",
+                                "<E>checkedCollection(java.util.Collection<E>,java.lang.Class<@org.jspecify.annotations.NonNull E>)",
+                                false,
+                                false,
+                                List.of(new TypeParamInfo("E", List.of("@Nullable Object"))),
+                                Map.of(
+                                    1,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NONNULL,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0)))))),
+                            new MethodInfo(
+                                "java.util.List<java.lang.@org.jspecify.annotations.Nullable String>",
+                                "nestedReturnType()",
+                                false,
+                                false,
+                                List.of(),
+                                Map.of(
+                                    -1,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NULLABLE,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0)))))),
+                            new MethodInfo(
+                                "void",
+                                "nestedParameterType(java.lang.@org.jspecify.annotations.Nullable String[],java.util.List<java.lang.@org.jspecify.annotations.NonNull String>[])",
+                                false,
+                                false,
+                                List.of(),
+                                Map.of(
+                                    0,
+                                        Set.of(
+                                            new NestedAnnotationInfo(
+                                                Annotation.NULLABLE,
+                                                ImmutableList.of(
+                                                    new TypePathEntry(
+                                                        TypePathEntry.Kind.ARRAY_ELEMENT, -1)))),
+                                    1,
+                                        Set.of(
+                                            new NestedAnnotationInfo(
+                                                Annotation.NONNULL,
+                                                ImmutableList.of(
+                                                    new TypePathEntry(
+                                                        TypePathEntry.Kind.ARRAY_ELEMENT, -1),
+                                                    new TypePathEntry(
+                                                        TypePathEntry.Kind.TYPE_ARGUMENT, 0)))))),
+                            new MethodInfo(
+                                "java.util.List<? extends java.lang.@org.jspecify.annotations.Nullable String>",
+                                "wildcardUpperBound()",
+                                false,
+                                false,
+                                List.of(),
+                                Map.of(
+                                    -1,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NULLABLE,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0),
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.WILDCARD_BOUND, 0)))))),
+                            new MethodInfo(
+                                "java.util.List<java.util.List<java.lang.String @org.jspecify.annotations.Nullable []>>",
+                                "nestedArrayType()",
+                                false,
+                                false,
+                                List.of(),
+                                Map.of(
+                                    -1,
+                                    Set.of(
+                                        new NestedAnnotationInfo(
+                                            Annotation.NULLABLE,
+                                            ImmutableList.of(
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0),
+                                                new TypePathEntry(
+                                                    TypePathEntry.Kind.TYPE_ARGUMENT, 0)))))))))));
   }
 
   private Map<String, List<ClassInfo>> getParsedJSON() {
     String tempPath = temporaryFolder.getRoot().getAbsolutePath();
+
+    // Define the Adapter for ImmutableList
+    JsonDeserializer<ImmutableList<?>> immutableListAdapter =
+        (json, typeOfT, context) -> {
+          ImmutableList.Builder<Object> builder = ImmutableList.builder();
+
+          if (json.isJsonArray()) {
+            JsonArray array = json.getAsJsonArray();
+            // Get the component type of list (with defensive check)
+            if (!(typeOfT instanceof ParameterizedType paramType)) {
+              throw new IllegalArgumentException("Expected parameterized ImmutableList type");
+            }
+            Type contentClass = paramType.getActualTypeArguments()[0];
+
+            for (JsonElement element : array) {
+              // Deserialize the inner element using Gson's context
+              Object value = context.deserialize(element, contentClass);
+              builder.add(value);
+            }
+          }
+          return builder.build();
+        };
+
     // list all json files in the  tempPath
     try (Stream<Path> stream = Files.list(Paths.get(tempPath))) {
       return stream
@@ -367,6 +540,7 @@ public class NullnessAnnotationSerializerTest {
               path -> {
                 try {
                   return new GsonBuilder()
+                      .registerTypeAdapter(ImmutableList.class, immutableListAdapter)
                       .create()
                       .fromJson(
                           new String(Files.readAllBytes(path), StandardCharsets.UTF_8),
